<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd"
            schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ros2_simple_ouster_driver</name>
    <version>0.0.0</version>
    <description>ROS2 Ouster lidar driver</description>
    <maintainer email="maxandre.ogeret@ut.ee">Maxandre Ogeret</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <build_depend>rosidl_default_generators</build_depend>

    <test_depend>ament_lint_auto</test_depend>
    <test_depend>ament_lint_common</test_depend>

    <depend>rclcpp</depend>
    <depend>libjsoncpp</depend>
    <depend>libjsoncpp-dev</depend>
    <depend>tf2_ros</depend>
    <depend>rclcpp_components</depend>
    <depend>rclcpp_lifecycle</depend>
    <depend>visualization_msgs</depend>
    <depend>ros2_simple_ouster_driver_msgs</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
